--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -69,7 +69,7 @@
             <a class="nav-link dropdown-toggle" id="navbarDropdown6" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">제5절 코드오류</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" th:href="@{/5/1}">1. Null Pointer 역참조</a></li>
-              <li><a class="dropdown-item" href="#!">2. 부적절한 자원 해제</a></li>
+              <li><a class="dropdown-item" th:href="@{/5/2}">2. 부적절한 자원 해제</a></li>
               <li><a class="dropdown-item" href="#!">3. 해제된 자원 사용</a></li>
               <li><a class="dropdown-item" th:href="@{/5/4}">4. 초기화되지 않은 변수 사용</a></li>
               <li><a class="dropdown-item" href="#!">5. 신뢰할 수 없는 데이터의 역직렬화</a></li>
@@ -92,10 +92,16 @@
             </ul>
           </li>
         </ul>
-        <form class="d-flex">
+        <form class="d-flex" th:if="${session.memberInfo == null}">
           <a class="btn btn-outline-dark" th:href="@{/member/login}">
             <i class="bi bi-person-circle"></i>
             LOGIN
+          </a>
+        </form>
+        <form class="d-flex" th:if="${session.memberInfo != null}">
+          <a class="btn btn-outline-dark" th:href="@{/member/logout}">
+            <i class="bi bi-person-circle"></i>
+            LOGOUT
           </a>
         </form>
       </div>
