--- a/securecoding/src/main/resources/templates/2/2.8.code.html
+++ b/securecoding/src/main/resources/templates/2/2.8.code.html
@@ -23,7 +23,7 @@
                   <div class="tabs">
                       <div class="tab">
                           <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
-                          <label for="tab-1" class="tab-label">CommandController.java</label>
+                          <label for="tab-1" class="tab-label">AuthorityController.java</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">@PostMapping("/2/8/vuln")
 public String RandomForm_vuln(HttpServletRequest request, Model model) {
@@ -57,7 +57,7 @@ public String RandomForm_vuln(HttpServletRequest request, Model model) {
                   <div class="tabs">
                       <div class="tab">
                           <input type="radio" name="css-tabs" id="tab-2" checked class="tab-switch">
-                          <label for="tab-2" class="tab-label">CommandController.java</label>
+                          <label for="tab-2" class="tab-label">AuthorityController.java</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@PostMapping("/2/8/secure")
 public String RandomForm_secure(HttpServletRequest request, Model model) throws NoSuchAlgorithmException {
