--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -98,7 +98,7 @@
             LOGIN
           </a>
         </form>
-        <form class="d-flex" th:if="${session.memberInfo != null}">
+        <form class="d-flex" style="font-size: 13px" th:if="${session.memberInfo != null}">
           <a class="btn btn-outline-dark" th:href="@{/member/logout}">
             <i class="bi bi-person-circle"></i>
             LOGOUT
