--- a/securecoding/src/main/resources/templates/2/2.16.html
+++ b/securecoding/src/main/resources/templates/2/2.16.html
@@ -33,8 +33,8 @@
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
           <form action="/2/16/secure" method="post">
-            <input type="text" id="username2" name="username2" class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
-            <input type="password" id="password2" name="password2" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
+            <input type="text" id="username2" name="username" class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
+            <input type="password" id="password2" name="password" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
             <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">로그인</button>
             <br />
             <br />
