--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -32,7 +32,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">제2절 보안기능</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#!">1. 적절한 인증 없는 중요기능 허용</a></li>
+              <li><a class="dropdown-item" th:href="@{/2/1}">1. 적절한 인증 없는 중요기능 허용</a></li>
               <li><a class="dropdown-item" href="#!">2. 부적절한 인가</a></li>
               <li><a class="dropdown-item" th:href="@{/2/3}">3. 중요한 자원에 대한 잘못된 권한 설정</a></li>
               <li><a class="dropdown-item" th:href="@{/2/4}">4. 취약한 암호화 알고리즘 사용</a></li>
