--- a/securecoding/src/main/resources/templates/2/2.1.html
+++ b/securecoding/src/main/resources/templates/2/2.1.html
@@ -17,14 +17,16 @@
       <div class="col mb-5" style="width: 40%; height: 200%">
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
-          <form action="/2/5/vuln" method="post">
-            <input type="text" id="name" name="name" disabled class="form-control" placeholder="이름" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
-            <input type="text" id="username" name="username" disabled class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
-            <input type="password" id="password" name="password" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
-            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
+          <form th:action="@{/2/1/vuln}" th:object="${form}" method="post">
+            <label th:for="name" style="margin-top: 2%; margin-left: 10%; margin-bottom: 2%">이름</label>
+            <input type="text" id="name" name="name" th:field="*{name}" class="form-control" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
+            <label th:for="username" style="margin-left: 10%; margin-bottom: 2%">아이디</label>
+            <input type="text" id="username" name="username" th:field="*{username}" disabled class="form-control" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; background-color:#FFF" />
+            <label th:for="password" style="margin-left: 10%; margin-bottom: 2%">비밀번호</label>
+            <input type="password" id="password" name="password" class="form-control" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">수정</button>
             <br />
             <br />
-            <p style="margin-left: 10%; margin-bottom: 4%; color: #808080">※ 입력한 정보가 실제로 DB에 반영됩니다.</p>
             <div class="card h-100">
             </div>
           </form>
@@ -32,14 +34,16 @@
       <div class="col mb-5" style="width: 40%; height: 200%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
-          <form action="/2/5/secure" method="post">
-            <input type="text" id="name2" name="name" disabled class="form-control" placeholder="이름" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
-            <input type="text"  id="username2" name="username" disabled class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; float: left" />
-            <input type="password" id="password2" name="password" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
+          <form th:action="@{/2/1/secure}" th:object="${form}" method="post">
+            <label th:for="name" style="margin-top: 2%; margin-left: 10%; margin-bottom: 2%">이름</label>
+            <input type="text" id="name2" name="name" th:field="*{name}" class="form-control" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
+            <label th:for="username" style="margin-left: 10%; margin-bottom: 2%">아이디</label>
+            <input type="text"  id="username2" name="username" th:field="*{username}" disabled class="form-control" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; background-color:#FFF" />
+            <label th:for="password" style="margin-left: 10%; margin-bottom: 2%">비밀번호</label>
+            <input type="password" id="password2" name="password" class="form-control" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; float: left" />
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">수정</button>
             <br />
             <br />
-            <p style="margin-left: 10%; margin-bottom: 4%; color: #808080">※ 입력한 정보가 실제로 DB에 반영됩니다.</p>
             <div class="card h-100">
             </div>
           </form>
